--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,26 @@
 }
 
 @layer base {
+    h1 {
+        @apply text-4xl font-bold;
+    }
+
+    h2 {
+        @apply text-3xl font-semibold;
+    }
+
+    h3 {
+        @apply text-2xl font-medium;
+    }
+
+    h4 {
+        @apply text-4xl font-normal;
+    }
+
+    h5 {
+        @apply text-lg font-light;
+    }
+
     h1,
     h2,
     h3,
